# DPLMP

./: .gitmodules  CMakeLists.txt  DPLMP.sln  README.md  build.bat  cmake.bat  make.bat
DPLMPClient/: DPLMPClient.sln  DPLMPClient.vcxproj  DPLMPClient.vcxproj.filters  dllmain.cpp
DPLMPClient/dpl/: CCharacter.cpp  CCharacter.h  CCharacterManager.cpp  CCharacterManager.h  CGameMusicManager.cpp  CGameMusicManager.h  CHandling.cpp  CHandling.h  CLifeEnvironment.cpp  CLifeEnvironment.h  CLifeEventDataManager.cpp  CLifeEventDataManager.h  CLifeInstances.cpp  CLifeInstances.h  CLifePlayer.h  CLifeSystem.cpp  CLifeSystem.h  CLoadingScreen.cpp  CLoadingScreen.h  CMusicSystem.cpp  CMusicSystem.h  CPlayerDriverBehaviour.cpp  CPlayerDriverBehaviour.h  CStateFrontend.cpp  CStateFrontend.h  CStateReload.cpp  CStateReload.h  CVehicle.cpp  CVehicle.h  CVehicleManager.cpp  CVehicleManager.h  LifeAcquirableVehicleManager.cpp  LifeAcquirableVehicleManager.h  PHBaseObj.cpp  PHBaseObj.h  SpoolPriority.h  SpoolableResourceManager.cpp  SpoolableResourceManager.h  (+1 more)
DPLMPCommon/: CommonDefines.h  OwnershipKinds.h  PLMath.cpp  PLMath.h  PLMessageIdentifiers.h  TimeCommon.h
DPLMPServer/: CMakeLists.txt  CMakeSettings.json  DPLMPServer.h
DPLMPServer/server/: CarController.cpp  CarController.h  CharacterController.cpp  CharacterController.h  Client.cpp  Client.h  Core.cpp  Core.h  DPLMPServer.cpp  NetworkedCar.cpp  NetworkedCar.h  NetworkedCharacter.cpp  NetworkedCharacter.h  ServerController.cpp  ServerController.h  TimeController.cpp  TimeController.h  UIDProvider.cpp  UIDProvider.h
(+20 files in other folders)
